                                 Muldis::D
                                  Changes
---------------------------------------------------------------------------

2010-10-xx

    * Muldis::D version 0.143.0 is released on CPAN as
    Muldis-D-0.143.0.tar.gz.

    * (Types_Catalog.pod)  In a partial reversal of one aspect of release
    0.140.0, further to that started in release 0.141.0, updated the
    catalog data type "Comment" to once again compose the
    "Ordered" and "Stringy" mixins.

    * (Types_Catalog.pod, Types.pod)  Removed the 2 catalog types
    "[U|C]CPString" and the types which used them now use "[|O]String"
    instead.  But these or similar types may be brought back later.

    * (Types.pod, Types_Catalog.pod)  Updated any references to the Unicode
    standard to specify version 6.0.0 rather than 5.2.0; this new 6.0.0 was
    published on 2010.10.11 but some parts are still being proofread.

    * (Types.pod, Types_Catalog.pod)  Reorganized the text types again, now
    arriving at something fundamentally a lot more like the state of
    release 0.139.0.  Renamed the mixin type "Text" to "Textual".  Split
    the scalar root type "Text.Unicode" into itself plus "Text" and
    "Text.Unicode.Canon".  Now "Text" is the scalar root type which
    composes "Textual" and "Ordered", and it has an infinite character
    repertoire and a "String"-typed possrep attribute.  Now "Text.Unicode"
    is a subtype of "Text" which adds codepoint plus utf8-octet possreps
    (the latter is new), and is a not-normalized string of Unicode
    codepoints.  Now "Text.Unicode.Canon" is a subtype of "Text.Unicode"
    and is NFD; it is the closest thing to what the "Text" of 0.139.0 or
    the "Text.Unicode" of 0.142.0 were.  Also added new subtype
    "Text.Unicode.Compat" of "Canon" which is NFKD.  The 2 types
    "Text.ASCII" and "Text.Latin1" remain as subtypes of "Unicode" which
    each add a possrep.  Also moved "CoreText" into Types_Catalog.pod and