@@ -9,7 +9,7 @@ Style and design guidelines for Muldis D
 
 =head1 VERSION
 
-This document is Muldis::D::Conventions version 0.142.0.
+This document is Muldis::D::Conventions version 0.143.0.
 
 =head1 PREFACE
 
