@@ -9,7 +9,7 @@ Muldis D boolean logic operators
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Boolean version 0.142.0.
+This document is Muldis::D::Core::Boolean version 0.143.0.
 
 =head1 PREFACE
 
