@@ -9,7 +9,7 @@ Muldis D Set and Maybe specific operators
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Set version 0.142.0.
+This document is Muldis::D::Core::Set version 0.143.0.
 
 =head1 PREFACE
 
