@@ -2,10 +2,13 @@
                                   Changes
 ---------------------------------------------------------------------------
 
-2010-10-xx
+2010-10-20
 
     * Muldis::D version 0.143.0 is released on CPAN as
     Muldis-D-0.143.0.tar.gz.
+
+    * This release is another snapshot in the process of overhauling
+    matters of character strings.
 
     * (Types_Catalog.pod)  In a partial reversal of one aspect of release
     0.140.0, further to that started in release 0.141.0, updated the
